 * Fix listing of the lua interfaces (web, telnet and console)
   in the advanced preferences panel
 * Fix spatializer audio filter panel
 * Fix crash within the video output code
 * Fix BDMV folder selection issue on OS X Mountain Lion, which treats such
   folders as a AVCHD file as soon as they include an item named INDEX.BDM
 * Fix bug which caused a hidden fullscreen panel 

Qt:
 * Fix clearing of Media Info panel on dialog exit

GNU/Linux:
 * Numerous D-Bus and MPRIS2 improvements
 * Reject broken versions of PulseAudio

Windows:
 * Fix uninstallation in different location than C:\

Translations:
 * Update of Brazilian Portuguese, Traditional Chinese, Thai, Portuguese,
   Japanese, Italian, Hebrew, Estonian, Spanish, Czech, Catalan, Bosnian,
   Asturian translations
 * New Gujarati, Aragonese translations


Changes between 2.0.4 and 2.0.5:
--------------------------------

Access:
 * Fix DVB-S delivery system detection

Audio Output:
 * Fix playback initial synchronization with PulseAudio
   (however similar bugs in PulseAudio version 2.0 and later still exist)
 * Fix file output bug affecting floating point on big endian systems

Demuxers:
 * Fix crash with some embedded subtitle fonts
 * Fix buffer overflow in HTML subtitles parser
 * Fix koreus lua parser
 * Improve reliability for RTSP streams sent by some IP cameras
 * Fix division by 0 in AIFF demuxer
 * Fix some MKV crashes when ordered editions have empty or broken links
 * Fix SWF potential crash on malformed files.

Video filters:
 * Fix crash in Freetype with embedded fonts
 * Fix wrong aspect ratio in some cases

Encoders:
 * Fix Mpeg-2 audio and video encoders initialization

Mac OS X:
 * Fix Reveal-in-Finder for files with non-Western file names
 * Fix crash with local statistics disabled
 * Fix Time counter UI look
 * Fix system sleep issue on OS X 10.5

Win32:
 * Fix https streaming

libVLC:
 * Fix audio and video track selection: