@@ -24,7 +24,8 @@ Mac OS X:
  * Fix crash within the video output code
  * Fix BDMV folder selection issue on OS X Mountain Lion, which treats such
    folders as a AVCHD file as soon as they include an item named INDEX.BDM
- * Fix bug which caused a hidden fullscreen panel 
+ * Fix bug which caused a hidden fullscreen panel
+ * Allow VLC to be associated with .dvdmedia packages
 
 Qt:
  * Fix clearing of Media Info panel on dialog exit
